# docs/swagger.json
@@ -1648,6 +1648,10 @@
         "endpoint.createDiseaseRequest": {
             "type": "object",
             "properties": {
+                "codename": {
+                    "type": "string",
+                    "example": "diabetes"
+                },
                 "description": {
                     "type": "string",
                     "example": "A metabolic disease"
@@ -1784,6 +1788,10 @@
             "description": "Disease information",
             "type": "object",
             "properties": {
+                "codename": {
+                    "type": "string",
+                    "example": "diabetes"
+                },
                 "createdAt": {
                     "type": "string"
                 },
@@ -1795,8 +1803,7 @@
                     "example": "A metabolic disease"
                 },
                 "id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string",
@@ -1842,8 +1849,7 @@
                     "example": "Diabetes,Hypertension"
                 },
                 "id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "integer"
                 },
                 "job": {
                     "type": "string",
@@ -1901,8 +1907,7 @@
                     "example": 175
                 },
                 "id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "integer"
                 },
                 "is_approved": {
                     "type": "boolean",
@@ -1984,8 +1989,7 @@
                     "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "integer"
                 },
                 "issues": {
                     "type": "string",
