# model/disease.go
@@ -7,5 +7,6 @@ import "gorm.io/gorm"
 type Disease struct {
 	gorm.Model
 	Name        string `json:"name" example:"Diabetes"`
+	Codename    string `json:"codename" gorm:"column:codename;uniqueIndex" example:"diabetes"`
 	Description string `json:"description" example:"A metabolic disease"`
 }
